cmake_minimum_required(VERSION 3.20)
project(SFML_Joystick)
set(SFML_STATIC_LIBRARIES TRUE)
set(CMAKE_CXX_STANDARD 20)
find_package(SFML 2.5 COMPONENTS system window graphics audio)
add_executable(SFML_Joystick main.cpp)
target_link_libraries(SFML_Joystick sfml-system sfml-window sfml-graphics sfml-audio -static)