cmake_minimum_required(VERSION 3.20)
project(SFML_Joystick)
set(SFML_STATIC_LIBRARIES TRUE)
set(CMAKE_CXX_STANDARD 17)
set(SFML_DIR E:/CppProjects/CommonLibs/SFML-2.6.0/lib/cmake/SFML)
include_directories(E:/CppProjects/CommonLibs/SFML-2.6.0/include)
find_package(SFML COMPONENTS system window graphics audio)
add_executable(SFML_Joystick main.cpp)
target_link_libraries(SFML_Joystick sfml-system sfml-window sfml-graphics sfml-audio -static)